syntax = "proto3";
package oraichain.orai.websocket;
import "gogoproto/gogo.proto";
option go_package = "github.com/oraichain/orai/x/websocket/types";

message DataSourceResult {
  option (gogoproto.goproto_stringer) = true;  
  string name = 1 [(gogoproto.moretags) = "json:\"data_source\""];
  bytes result = 2 ;  
  string status = 3 [(gogoproto.moretags) = "json:\"result_status\""];
  
}
