syntax = "proto3";
package oraichain.orai.websocket;
import "gogoproto/gogo.proto";
import "x/websocket/types/types_dsource_result.proto";

option go_package = "github.com/oraichain/orai/x/websocket/types";

message TestCaseResult {
  option (gogoproto.goproto_stringer) = true;  
  string name = 1 [(gogoproto.moretags) = "json:\"test_case\""];
  string status = 2;
  repeated DataSourceResult DataSourceResults = 3 [(gogoproto.moretags) = "json:\"data_source_result\"", (gogoproto.customname) = "DataSourceResults"];	  
}